# watermarker

./: .gitignore  BUILD_SPEC.md  Makefile  Procfile  nixpacks.toml  pyproject.toml  railway.toml  watermark_poc.py
frontend/: .env.local.example  .gitignore  nixpacks.toml  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/assets/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/devices/: page.tsx
frontend/app/investigator/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/tenants/: page.tsx
frontend/app/users/: page.tsx
frontend/components/: app-shell.tsx  auth-image.tsx  logo.tsx  token-gate.tsx
frontend/components/ui/: badge.tsx  button.tsx  table.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts
scripts/: demo.py
tests/: test_backend_e2e.py  test_core_roundtrip.py
watermark_mvp/: __init__.py
watermark_mvp/agent/: cli.py
watermark_mvp/backend/: app.py  db.py  run.py
watermark_mvp/cli/: extract.py
watermark_mvp/core/: __init__.py  conv_code.py  payload.py  symbols.py
